--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ button{
 }
 
 button:focus{
-    outline: 1px solid var(--color-accent);
+    outline: 1px solid transparent;
 }
 /* Common */
 .section{
@@ -105,6 +105,14 @@ button:focus{
 .header__logo__title{
     font-size: 1.8rem;
 }
+.header__toggle{
+    display: none;
+    color: var(--color-white);
+    font-size: 1.5rem;
+    position: absolute;
+    top: 1.3rem;
+    right: 1rem;
+}
 
 .header__menu{
     display: flex;
@@ -112,7 +120,10 @@ button:focus{
 }
 
 .header__menu__item{
+    display: block;
     padding: 8px 16px;
+    border-bottom: 1px solid transparent;
+
 }
 
 .header__menu__item:hover{
@@ -474,7 +485,7 @@ button:focus{
 /* 브라우저 너비 별로 스타일링을 다시해줄수있는 것 미디어커리 */
 @media screen and (max-width: 768px){
     .section{
-        padding: 3rem 2rem;
+        padding: 4rem 2rem;
     }
 
     .title{
@@ -487,13 +498,22 @@ button:focus{
     .header{
         flex-direction: column;
         align-items: start;
+        background-color: var(--color-primary);
+    }
+    .header__toggle{
+        display: block;
     }
 
     .header__menu{
+        display: none;
         flex-direction: column;
         text-align: center;
         padding: 1rem 4rem;
         gap: 1rem;
+    }
+
+    .header__menu.open{
+        display: flex;
     }
 
     .header__nav{
