--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+/* html 페이지 이동시 부드러운 스크롤 scroll-behavior: smooth; */
+
+
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
